# deck

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  cargo-generate.toml  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.zed/: settings.json
assets/: icon.icns
docs/: AGENTIC-ENGINEERING.md  LEARNINGS.md  UPGRADING.md  background-jobs.md  overlay.md
scripts/: make-app-icon.py  screenshot.sh  winid.swift
src/: command_palette.rs  main.rs  settings.rs  settings_view.rs  shell.rs  theme.rs  tray.rs  welcome.rs
src/overlay/: harden.rs  mod.rs  pill.rs  rail.rs  state.rs  status.rs
