[package]
name = "deck"
version = "0.1.0"
edition = "2021"
description = "An omakase native desktop app starter (macOS + Linux) on GPUI + gpui-component. Fork it, rename it, ship it."
license = "0BSD"
default-run = "deck"

[[bin]]
name = "deck"
path = "src/main.rs"

[dependencies]
# Fresh GPUI, straight from Zed's git — the DEFAULT channel (Metal on macOS, wgpu on
# Linux). `gpui-component` is developed against Zed's gpui HEAD, so the only way to pair
# fresh gpui with the component kit is this matched git pair. Reproducibility comes from
# the committed Cargo.lock (it pins exact commits); bump on a cadence with `just bump-gpui`.
# Prefer the simpler-but-stale pure-crates.io pair instead? See docs/UPGRADING.md.
gpui = { git = "https://github.com/zed-industries/zed" }
# After Zed split gpui into multiple crates, the windowing + renderer backend (and the
# `Application` bootstrap) live in `gpui_platform`.
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Prebuilt asset source: all gpui-component icon SVGs + bundled fonts.
# Register it with `.with_assets(...)` so `IconName::*` renders.
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# Preferences: serialize a Settings struct to the platform config dir.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# --- Optional: menu-bar / tray apps (`--features tray`) — cross-platform ---
# tray-icon draws a native status item on every OS: NSStatusItem (macOS),
# libappindicator / StatusNotifierItem (Linux), Shell_NotifyIcon (Windows).
# There is no second renderer — your windows stay GPUI everywhere.
tray-icon = { version = "0.24", optional = true }

[features]
default = []
tray = ["dep:tray-icon", "dep:objc2", "dep:objc2-app-kit", "dep:objc2-foundation"]

# objc2 is only used to hide the macOS dock icon — pull it on macOS only, so a
# Linux/Windows `--features tray` build never tries to compile Apple crates.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", optional = true }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# ---------------------------------------------------------------------------
# `cargo bundle` config (batteries included). On macOS → Deck.app; cargo
# bundle can also emit `deb` on Linux. Run `just bundle`.
#   cargo install cargo-bundle
# Drop your own 1024x1024 PNG at assets/icon.png and re-bundle to rebrand.
# ---------------------------------------------------------------------------
[package.metadata.bundle]
name = "Deck"
identifier = "com.example.deck"
icon = ["assets/icon.png"]
category = "public.app-category.productivity"
short_description = "A small, snappy native desktop app starter built on GPUI."
long_description = "Deck is a tiny, opinionated GPUI starter you can fork to build your own fast, native desktop app on macOS and Linux (and wire your own AI agent into it)."
osx_minimum_system_version = "11.0"
